# ehr_ml_1

./: .gitignore  API.md  DEPLOYMENT.md  QUICKSTART.md  README.md  deployment_plan.txt  end_to_end.txt  main.py  pyproject.toml  requirements.txt  test.py
api/: app.py
app/: config.py  inference.py  load_model.py  main.py  model_service.py  schemas.py
db/: db.py
mlruns/0/: meta.yaml
mlruns/271501573593520844/: meta.yaml
mlruns/519198706279914348/: meta.yaml
mlruns/519198706279914348/6eed3b9e3b9f4f16a4db7e160fd14b55/: meta.yaml
mlruns/519198706279914348/6eed3b9e3b9f4f16a4db7e160fd14b55/metrics/: f1  flare_signal_rate  (+4 more)
mlruns/519198706279914348/8f4d5bbeba144dd89a430b03994da5d4/: meta.yaml
mlruns/571453331324984271/: meta.yaml
mlruns/571453331324984271/fd7332789f774e68a3cc1273ef756598/: meta.yaml
mlruns/622342759694491810/: meta.yaml
mlruns/622342759694491810/32af71ea4070426889926442fb613dbf/: meta.yaml
mlruns/971526961077954172/: meta.yaml
mlruns/971526961077954172/b2552828127f48e5958bfe8670410558/: meta.yaml
mlruns/models/flare_detector_v1/: meta.yaml
notebook/: test.ipynb
notebook/mlruns/0/: meta.yaml
pipeline/: extract_data.py  get_patient.py  mlflow_pipeline.py  preprocessing.py  training.py  visualization.py
sagemaker/: README.md
sagemaker/docker/: Dockerfile  dockerd-entrypoint.py  inference.py  requirements.txt
sagemaker/scripts/: build_and_push.sh  check_aws_setup.py  deploy_model.py  deploy_with_setup.sh  quick_deploy.sh
sagemaker/tests/: test_endpoint.py
sagemaker/utils/: config.py  model_package.py
utils/: helper.py
(+143 files in other folders)
